fixed the content card section overflowing

--- a/styles/mainPage.css
+++ b/styles/mainPage.css
@@ -232,6 +232,9 @@ body {
   margin-top: 96px;
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  width: 90%;
 }
 
 #why .card {
